--- a/smart_store_django/.gitignore
+++ b/smart_store_django/.gitignore
@@ -7,4 +7,4 @@ smart_store/smart_store_django/smart_store_solution/my_settings.py
 smart_store/smart_store_django/.vscode
 
 # MAC OS meta data
-smart_store/smart_store_django/*.DS_Store
+smart_store/smart_store_django/.DS_Store
