--- a/smart_store_django/.gitignore
+++ b/smart_store_django/.gitignore
@@ -1,10 +1,10 @@
 # gitignore
 
 # kakao DEV API
-/smart_store/smart_store_django/smart_store_project/my_settings.py
+~/smart_store_project/my_settings.py
 
 # vscode setting
-/smart_store/smart_store_django/.vscode
+~/.vscode
 
 # MAC OS meta data
-/smart_store/smart_store_django/.DS_Store
+~/.DS_Store
