jwt decode complete, user permission with authorization ...ing

--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ djangorestframework-jwt = "*"
 requests = "*"
 pymysql = "*"
 django-mysql = "*"
-pyjwt = "*"
+pyjwt = "==1.7.1"
 djangorestframework-simplejwt = "*"
 
 [dev-packages]
