solving KOE006, fourth trial

--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     
     location / {
         include proxy_params;
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://ec2-3-35-137-239.ap-northeast-2.compute.amazonaws.com
         }
     
     location /static/ {
