solving KOE006, fifth trial(nginx.conf proxy setting...)

--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     
     location / {
         include proxy_params;
-        proxy_pass http://ec2-3-35-137-239.ap-northeast-2.compute.amazonaws.com
+        proxy_pass ec2-3-35-137-239.ap-northeast-2.compute.amazonaws.com;
         }
     
     location /static/ {
