--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -6,6 +6,7 @@ server {
     
     location / {
         include proxy_params;
+        proxy_hide_header Access-Control-Allow-Origin;
         add_header 'Access-Control-Allow-Origin' '*';
         proxy_pass http://127.0.0.1:8000;
         }
