--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -5,7 +5,7 @@ server {
     client_max_body_size 128M;
     
     location / {
-        #include proxy_params;
+        include proxy_params;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
