--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -11,6 +11,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
         proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 64;
         proxy_pass http://127.0.0.1:8000;
         }
     
