--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -11,6 +11,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host;
         proxy_pass http://127.0.0.1:8000;
+        
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
         }
     
     location /static/ {
