--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -5,11 +5,12 @@ server {
     client_max_body_size 128M;
     
     location / {
-        include proxy_params;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $http_host;
+        proxy_set_header Host $host;
+
+        include proxy_params;
         proxy_pass http://127.0.0.1:8000;
         
         proxy_headers_hash_max_size 512;
