--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name *.compute.amazonaws.com;
+    server_name ec2-3-35-137-239.ap-northeast-2.compute.amazonaws.com;
     charset utf-8;
     client_max_body_size 128M;
     
@@ -8,7 +8,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
 
         include proxy_params;
         proxy_pass http://127.0.0.1:8000;
