--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ec2-3-35-137-239.ap-northeast-2.compute.amazonaws.com;
+    server_name *.compute.amazonaws.com;
     charset utf-8;
     client_max_body_size 128M;
     
