--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -11,11 +11,32 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
-        #proxy_set_header Host $http_host;
+        proxy_set_header Host $host:$server_port;
         
         include proxy_params;
         proxy_pass http://127.0.0.1:8000;
         }
+    
+    location /static/ {
+        alias /var/www/smart_store/smart_store_django/static/;
+    }
+}
+
+server {
+    listen 443 ssl;
+    
+    ssl_certificate     /etc/nginx/conf.d/django.cert;
+    ssl_certificate_key /etc/nginx/conf.d/django.key;
+    
+    access_log          /var/log/nginx/443_access.log;
+    error_log           /var/log/nginx/443_error.log;
+    
+    location / {
+        proxy_set_header Host $host:$server_port;
+        
+        include proxy_params;
+        proxy_pass http://127.0.0.1:8000;
+    }
     
     location /static/ {
         alias /var/www/smart_store/smart_store_django/static/;
