--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -32,6 +32,12 @@ server {
     error_log           /var/log/nginx/443_error.log;
     
     location / {
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
+        
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host:$server_port;
         
         include proxy_params;
