change ssl path

--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -25,8 +25,8 @@ server {
 server {
     listen 443 ssl;
     
-    ssl_certificate     /etc/nginx/conf.d/django.cert;
-    ssl_certificate_key /etc/nginx/conf.d/django.key;
+    ssl_certificate     /etc/nginx/ssl/django.cert;
+    ssl_certificate_key /etc/nginx/ssl/django.key;
     
     access_log          /var/log/nginx/443_access.log;
     error_log           /var/log/nginx/443_error.log;
