change ssl path

--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -28,8 +28,8 @@ server {
     ssl_certificate     /etc/nginx/ssl/django.cert;
     ssl_certificate_key /etc/nginx/ssl/django.key;
     
-    access_log          /var/log/nginx/443_access.log;
-    error_log           /var/log/nginx/443_error.log;
+    #access_log          /var/log/nginx/443_access.log;
+    #error_log           /var/log/nginx/443_error.log;
     
     location / {
         proxy_headers_hash_max_size 512;
