--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -24,12 +24,14 @@ server {
 
 server {
     listen 443 ssl;
+    server_name *.compute.amazonaws.com;
+    charset utf-8;
+    client_max_body_size 128M;
     
     ssl_certificate     /etc/nginx/ssl/django.cert;
     ssl_certificate_key /etc/nginx/ssl/django.key;
-    
-    #access_log          /var/log/nginx/443_access.log;
-    #error_log           /var/log/nginx/443_error.log;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     
     location / {
         proxy_headers_hash_max_size 512;
