--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -11,7 +11,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host:$server_port;
+        #proxy_set_header Host $host:$server_port;
         
         include proxy_params;
         proxy_pass http://127.0.0.1:8000;
@@ -28,8 +28,8 @@ server {
     charset utf-8;
     client_max_body_size 128M;
     
-    ssl_certificate     /etc/nginx/ssl/django.cert;
-    ssl_certificate_key /etc/nginx/ssl/django.key;
+    ssl_certificate     /etc/nginx/conf.d/smartstore.cert;
+    ssl_certificate_key /etc/nginx/conf.d/smartstore.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
     
@@ -40,7 +40,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host:$server_port;
+        #proxy_set_header Host $host:$server_port;
         
         include proxy_params;
         proxy_pass http://127.0.0.1:8000;
