--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -28,7 +28,7 @@ server {
     charset utf-8;
     client_max_body_size 128M;
     
-    ssl_certificate     /etc/nginx/conf.d/smartstore.cert;
+    ssl_certificate     /etc/nginx/conf.d/smartstore.crt;
     ssl_certificate_key /etc/nginx/conf.d/smartstore.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
