--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -30,8 +30,8 @@ server {
     
     ssl_certificate     /etc/nginx/conf.d/smartstore.crt;
     ssl_certificate_key /etc/nginx/conf.d/smartstore.key;
-    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+    #ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    #ssl_ciphers         HIGH:!aNULL:!MD5;
     
     location / {
         proxy_headers_hash_max_size 512;
