--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -12,7 +12,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         #proxy_set_header Host $host:$server_port;
-        
+        proxy_cookie_path / "/; secure; SameSite=None";
+
         include proxy_params;
         proxy_pass http://127.0.0.1:8000;
         }
@@ -41,7 +42,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $host:$server_port;
-        
+        proxy_cookie_path / "/; secure; SameSite=None";
+
         include proxy_params;
         proxy_pass http://127.0.0.1:8000;
     }
