--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -5,13 +5,13 @@ server {
     client_max_body_size 128M;
     
     location / {
-        # proxy_headers_hash_max_size 512;
-        # proxy_headers_hash_bucket_size 128;
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
         
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
-        # proxy_set_header X-Real-IP $remote_addr;
-        #proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host:$server_port;
         #proxy_cookie_path / "/; secure; SameSite=None";
         
         include proxy_params;
@@ -23,31 +23,31 @@ server {
     }
 }
 
-# server {
-#     listen 443 ssl;
-#     server_name *.compute.amazonaws.com;
-#     charset utf-8;
-#     client_max_body_size 128M;
+server {
+    listen 443 ssl;
+    server_name *.compute.amazonaws.com;
+    charset utf-8;
+    client_max_body_size 128M;
     
-#     ssl_certificate     /etc/nginx/conf.d/smartstore.crt;
-#     ssl_certificate_key /etc/nginx/conf.d/smartstore.key;
-#     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-#     ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_certificate     /etc/nginx/conf.d/smartstore.crt;
+    ssl_certificate_key /etc/nginx/conf.d/smartstore.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     
-#     location / {
-#         proxy_headers_hash_max_size 512;
-#         proxy_headers_hash_bucket_size 128;
+    location / {
+        proxy_headers_hash_max_size 512;
+        proxy_headers_hash_bucket_size 128;
         
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host:$server_port;
         
-#         include proxy_params;
-#         proxy_pass http://127.0.0.1:8000;
-#     }
+        include proxy_params;
+        proxy_pass http://127.0.0.1:8000;
+    }
     
-#     location /static/ {
-#         alias /var/www/smart_store/smart_store_django/static/;
-#     }
-# }
+    location /static/ {
+        alias /var/www/smart_store/smart_store_django/static/;
+    }
+}
