--- a/smart_store_django/config/nginx/nginx.conf
+++ b/smart_store_django/config/nginx/nginx.conf
@@ -11,7 +11,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host:$server_port;
+        # proxy_set_header Host $host:$server_port;
         #proxy_cookie_path / "/; secure; SameSite=None";
         
         include proxy_params;
